# ai-signal

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  _Index.md  merge_publications.py  requirements.txt
.github/workflows/: deploy.yml
hubs/entities/: AMD.md  Adobe.md  Alibaba.md  Amazon.md  Anthropic.md  Apple.md  Arm.md  Baidu.md  ByteDance.md  Cerebras.md  Cohere.md  Databricks.md  DeepSeek.md  Google.md  Huawei.md  IBM.md  Intel.md  Meta.md  Microsoft.md  Mistral.md  NVIDIA.md  OpenAI.md  Oracle.md  Palantir.md  Perplexity.md  SAP.md  Salesforce.md  Samsung.md  Scale AI.md  Snowflake.md  TSMC.md  Tencent.md  Tesla.md  xAI.md
hubs/topics/: Corporate Moves.md  Global AI Race.md  Infrastructure & Compute.md  Model Breakthroughs.md  Policy & Regulation.md
scripts/: precache_model.py  run-pipeline.ps1  run-pipeline.sh  setup.ps1  setup.sh  sync-data.ps1  sync-data.sh
site/: archive.html  articles.json  chat.html  compare-build-io.html  entities.html  events.html  index.html  search.html  style.css  submit.html  topics.html  wwdc-2026.html
site/entities/: AMD.html  (+33 more)
source/: pyproject.toml
source/config/: dedupe-thresholds.yaml  embeddings.yaml  entities.yaml  publishing.yaml  retention.yaml  sources.yaml  topics.yaml
source/news_trends/: __init__.py  __main__.py  articles_io.py  chat.py  cli.py  config.py  db.py  dedupe.py  graph.py  index.py  ingest.py  models.py  normalize.py  runlog.py  site.py  split.py  urls.py  util.py
worker/: README.md  package-lock.json  package.json  wrangler.toml
(+6962 files in other folders)
